--- a/web_client/src/App.css
+++ b/web_client/src/App.css
@@ -1,5 +1,7 @@
 .App {
     text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
 .App-logo {
@@ -35,4 +37,8 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+.ant-spin-container, .ant-spin-nested-loading {
+    height: 100%;
 }
