--- a/web_client/src/components/Layout/LayoutMenu.css
+++ b/web_client/src/components/Layout/LayoutMenu.css
@@ -1,22 +1,27 @@
 .logo {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  padding: 16px;
 }
 
 .site-layout .site-layout-background {
-    background: #fff;
+  background: #fff;
 }
 
 .header {
-    background: #fff;
-    display: flex;
-    flex-direction: row-reverse;
-    padding: 0px 16px;
+  background: #fff;
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 0px 16px;
 }
 
 .header-avatar {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+.header-name {
+  cursor: pointer;
+  margin-right: 16px;
 }
