--- a/app_client/IoT2/app/src/main/res/layout/fragment_areas.xml
+++ b/app_client/IoT2/app/src/main/res/layout/fragment_areas.xml
@@ -4,11 +4,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="5dp"
     android:layout_height="match_parent">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <GridView
+        android:id="@+id/gridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true" />
+        android:numColumns="2"
+        android:background="#E3E1E1"
+        android:horizontalSpacing="10dp"
+        android:verticalSpacing="5dp"
+        />
 
 </RelativeLayout>
