--- a/app_client/IoT2/app/src/main/res/layout/fragment_home.xml
+++ b/app_client/IoT2/app/src/main/res/layout/fragment_home.xml
@@ -146,11 +146,12 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_marginTop="44dp"
                 android:background="@drawable/custom2"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
@@ -158,8 +159,16 @@
                     android:id="@+id/lineChart"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:visibility="gone"></com.github.mikephil.charting.charts.LineChart>
-            </LinearLayout>
+                    android:visibility="gone">
+
+                </com.github.mikephil.charting.charts.LineChart>
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:gravity="center"/>
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/textView"
@@ -172,15 +181,7 @@
                 app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
                 app:layout_constraintTop_toTopOf="@+id/constraintLayout2" />
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="248dp"
-                android:layout_marginEnd="16dp"
-                android:text="test"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
 
             <Button
                 android:id="@+id/alarm"
