--- a/app_client/IoT2/app/src/main/res/drawable/custom1.xml
+++ b/app_client/IoT2/app/src/main/res/drawable/custom1.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/backgroud"/>
+    <solid android:color="#E6EDF3"/>
     <stroke android:color="@color/a"
-        android:width="4dp"/>
+        android:width="1.5dp"/>
     <corners android:radius="10dp"/>
 
 </shape>
