--- a/app_client/IoT2/app/src/main/res/layout/activity_login.xml
+++ b/app_client/IoT2/app/src/main/res/layout/activity_login.xml
@@ -53,7 +53,7 @@
             android:ems="10"
             android:hint="password"
             android:inputType="textPassword"
-            android:text="alo123"
+            android:text=""
             app:layout_constraintStart_toStartOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -66,7 +66,7 @@
         android:ems="10"
         android:hint="email"
         android:inputType="textPersonName"
-        android:text="giang@gmail.com"
+        android:text=""
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
