--- a/app_client/IoT2/app/src/main/res/layout/fragment_user.xml
+++ b/app_client/IoT2/app/src/main/res/layout/fragment_user.xml
@@ -34,7 +34,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/img" />
+                        android:src="@drawable/img1" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
